--- a/frontend/src/components/crm/Modals/styles/FetchReportModal.css
+++ b/frontend/src/components/crm/Modals/styles/FetchReportModal.css
@@ -1,4 +1,4 @@
-.fetch-report-modal__overlay {
+/* .fetch-report-modal__overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -124,4 +124,4 @@
 .fetch-report-modal__link-btn:hover {
     color: #1dc5d8;
     text-decoration: none;
-}
+} */
