--- a/frontend/src/components/crm/Product/styles/AddClientModal.css
+++ b/frontend/src/components/crm/Product/styles/AddClientModal.css
@@ -2,7 +2,10 @@
 .client-modal__overlay {
   position: fixed;
   inset: 0;
-  background: rgba(78, 78, 78, 0.493);
+  background: rgba(0, 0, 0, 0.65);
+    backdrop-filter: blur(8px);
+    border-radius: 20px;
+    -webkit-backdrop-filter: blur(8px);
   display: flex;
   border-radius: 20px;
   flex-direction: column;
